Drop deprecated JVM flag, use canonical way of defining scriptedLaunchOpts