@@ -1,7 +1,8 @@
 ScriptedPlugin.scriptedSettings
 
-scriptedLaunchOpts := { scriptedLaunchOpts.value ++
-  Seq("-Xmx1024M", "-XX:MaxPermSize=256M", "-Dplugin.version=" + version.value)
-}
+scriptedLaunchOpts := scriptedLaunchOpts.value ++ Vector(
+  "-Xmx1024M",
+  s"-Dplugin.version=${version.value}"
+)
 
 scriptedBufferLog := false
